name:                loggly
version:             0.1.0.0
synopsis:            loggly API for haskell
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           Vertigo Media Inc. 2014 (c)
category:            Web
build-type:          Simple
cabal-version:       >=1.10
description:         loggly API for haskell

library
  exposed-modules:     Web.Loggly
  hs-source-dirs:      src
  build-depends:       aeson
                     , base >=4.2 && <4.8
                     , bytestring
                     , http-client >= 0.4.6.1
                     , http-types >= 0.8.5
                     , io-streams
                     , io-streams-http >= 0.2.0.0
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vertigomedia/loggly.git
